--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^15.6.0",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.6.3"
+    "react-router-dom": "^7.6.3",
+    "swiper": "^11.2.10"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.6.0",
